# claude-managed-agents-labs

./: .env.example  .gitignore  LICENSE  README.md  lab_01_console_agent.md  lab_02_first_python_session.md  lab_03_research_agent.md  lab_04_data_science_env.md  lab_05_streaming_repl.md  lab_06_slack_mcp_agent.md  lab_07_hitl.md  lab_08_financial_analyst.md  lab_09_dcf_outcome.md  lab_10_support_memory.md  lab_11_research_write.md  lab_12_bugfixer_pr.md  lab_13_capstone.md  pyproject.toml  requirements.txt  setup_uv.sh
code/: .env.example  README.md  setup_uv.sh
code/lab_07_hitl/: README.md  (+2 more)
code/lab_12_bugfixer_pr/template_repo/: pyproject.toml
code/lab_12_bugfixer_pr/template_repo/tests/: test_math.py
lab_01_console_agent/: README.md  lab01.ipynb
lab_02_first_python_session/: README.md  lab02.ipynb
lab_03_research_agent/: README.md  lab03.ipynb  lab03.py
lab_04_data_science_env/: README.md  lab04.ipynb
lab_05_streaming_agent/: README.md  lab05.ipynb  lab05.py
lab_05_streaming_repl/: README.md  lab05.ipynb
lab_06_linear_slack_mcp_agent/: README.md  lab06.ipynb  lab06.py
lab_06_slack_mcp_agent/: README.md  lab06.ipynb
lab_07_hitl/: README.md  lab07.ipynb
lab_08_financial_analyst/: README.md  lab08.ipynb  revenue.csv
lab_09_outcome_rubric/: README.md  lab09.ipynb  lab09.py  rubric.md
lab_10_support_memory/: README.md  lab10.ipynb  lab10.py
lab_11_research_write/: README.md  lab11.ipynb  lab11.py
lab_12_bugfixer_pr/: README.md  lab12.ipynb  lab12.py
lab_13_capstone/: README.md  lab13.ipynb  lab13.py
shared/: cache_usage.py  prompts.py
(+35 files in other folders)
